--- a/ddr_portal/Users/Static/CSS/signup.css
+++ b/ddr_portal/Users/Static/CSS/signup.css
@@ -2,8 +2,8 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #f1f3f5;
     font-family: 'Segoe UI', sans-serif;
-    background: #f4f4f4;
 }
 
 .container {
