--- a/ddr_portal/Users/Templates/assign_folder_roles.html
+++ b/ddr_portal/Users/Templates/assign_folder_roles.html
@@ -111,9 +111,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 
 <div class="breadcrumbs">
-    {% if role_id == 1 %}<a href="{% url 'admin' %}">Dashboard</a> >{% endif %}
-    {% if role_id == 2 %}<a href="{% url 'head' %}">Dashboard</a> >{% endif %}
-    {% if role_id == 3 %}<a href="{% url 'faculty' %}">Dashboard</a> >{% endif %}
+    <a href="{% url 'role_redirect' %}">Dashboard</a> >
     <span>Assign Roles</span>
 </div>
 
