--- a/ddr_portal/Users/Templates/documents.html
+++ b/ddr_portal/Users/Templates/documents.html
@@ -86,13 +86,7 @@
 
   <!-- Breadcrumbs -->
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-        <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
+    <a href="{% url 'role_redirect' %}">Dashboard</a> >
     <a href="{% url 'folder_list' %}">Folders</a> >
     <a href="#">{{ folder.folder_name }}</a> >
     <span>{{ subfolder_name }}</span>
