--- a/ddr_portal/Users/Templates/edit_dynamic_table.html
+++ b/ddr_portal/Users/Templates/edit_dynamic_table.html
@@ -207,13 +207,7 @@
 
   <!-- Breadcrumbs -->
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-        <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
+        <a href="{% url 'role_redirect' %}">Dashboard</a> >
     <a href="{% url 'folder_edit_documents' document.folder.id %}">{{ document.folder.folder_name }}</a> >
     <span>Edit Document</span>
   </div>
