--- a/ddr_portal/Users/Templates/folder_list.html
+++ b/ddr_portal/Users/Templates/folder_list.html
@@ -133,13 +133,7 @@
   </div>
 
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-        <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
+    <a href="{% url 'role_redirect' %}">Dashboard</a> >
     <span>Folders</span>
   </div>
 
