--- a/ddr_portal/Users/Templates/profile.html
+++ b/ddr_portal/Users/Templates/profile.html
@@ -147,26 +147,13 @@
       </div>
     </div>
     <div class="right-side">
-      {% if role_id == 1 %}
         <i class="bi bi-house-door" onclick="location.href='{% url 'role_redirect' %}'"></i>
-    {% elif role_id == 2 %}
-        <i class="bi bi-house-door" onclick="location.href='{% url 'head' %}'"></i>
-    {% elif role_id == 3 %}
-        <i class="bi bi-house-door" onclick="location.href='{% url 'faculty' %}'"></i>
-    {% endif %}
-
     </div>
   </div>
 
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-        <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
-    <span>Profile</span>
+      <a href="{% url 'role_redirect' %}">Dashboard</a> >
+    <span>{{ role }}</span>
   </div>
 
   <div class="profile-card">
