--- a/ddr_portal/Users/Templates/template_preview.html
+++ b/ddr_portal/Users/Templates/template_preview.html
@@ -168,14 +168,8 @@
   </div>
 
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-        <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
-    <a href="{% url 'upload_folder_list' %}">Folders</a> >
+    <a href="{% url 'role_redirect' %}">Dashboard</a> >
+    <a href="{% url 'folder_list' %}">Folders</a> >
     <span>{{ folder.folder_name }}</span>
   </div>
 
