--- a/ddr_portal/Users/Templates/uploaded_files.html
+++ b/ddr_portal/Users/Templates/uploaded_files.html
@@ -152,13 +152,7 @@
 
   <!-- Breadcrumbs -->
   <div class="breadcrumbs">
-    {% if role_id == 1 %}
-       <a href="{% url 'admin' %}">Dashboard</a> >
-    {% elif role_id == 2 %}
-        <a href="{% url 'head' %}">Dashboard</a> >
-    {% elif role_id == 3 %}
-        <a href="{% url 'faculty' %}">Dashboard</a> >
-    {% endif %}
+    <a href="{% url 'role_redirect' %}">Dashboard</a> >
     <a href="{% url 'folder_list' %}">Folders</a> >
     <span>Uploaded Files for {{ document.title }}</span>
   </div>
