--- a/ddr_portal/Users/Templates/head.html
+++ b/ddr_portal/Users/Templates/head.html
@@ -21,7 +21,7 @@
     </div>
     <ul>
       <li class="active"><i class="bi bi-house-door"></i> Dashboard</li>
-      <li><i class="bi bi-eye"></i> View Actions</li>
+      <li><a href="{% url 'under_head_role' %}" style="text-decoration: none; color: inherit;"><i class="bi bi-eye"></i> View Actions</a></li>
       <li>
         <a href="{% url 'profile' %}" style="text-decoration: none; color: inherit;">
           <i class="bi bi-person"></i> Profile
@@ -58,7 +58,7 @@
       </div>
       <div class="card">
         <h3><i class="bi bi-pencil-square"></i> Edit File Structure</h3>
-        <button>Edit</button>
+        <a href="{% url 'edit_list' %}"><button>Edit</button></a>
       </div>
         <div class="card">
     <h3><i class="bi bi-clock-history"></i> View History</h3>
